--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "locus": "^2.0.4",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
+    "cors": "^2.8.5",
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
